[package]
name = "vcsi"
version = "0.1.0"
authors = ["Jonathan Frankel <frankel.jb@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.7"
clap = "2.33.0"
conv = "0.3.3"
dotenv = "0.14.1"
env_logger = "0.6.2"
exitcode = "1.1.2"
image = "0.21.2"
imageproc = "0.18.0"
log = "0.4.8"
palette = "0.4.1"
rand = "0.7.0"
rayon = "1.1.0"
rusttype = "0.7.7"
rustfft = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.0"
textwrap = "0.11"
walkdir = "2.2.9"
