[package]
authors = ["Jonathan Frankel <frankeljb@gmail.com>"]
description = "Used to generate contact sheets of videos."
edition = "2018"
keywords = ["contact", "sheet"]
license = "MIT"
name = "vcsr"
readme = "README.md"
repository = "https://github.com/FrankelJb/vcsr"
version = "0.4.0"

[lib]
name = "vcsr"
path = "src/lib.rs"

[[bin]]
name = "vcsr"
path = "src/main.rs"

[dependencies]
chrono = "0.4.7"
clap = "2.33.0"
console = "0.8.0"
conv = "0.3.3"
dirs = "2.0.2"
dotenv = "0.14.1"
exitcode = "1.1.2"
flexi_logger = "0.14"
humantime = "1.2.0"
image = "0.23.14"
imageproc = "0.22.0"
indicatif = "0.11.0"
log = "0.4.8"
num_cpus = "1.0"
palette = "0.4.1"
rand = "0.7.0"
rayon = "1.1.0"
rustfft = "3.0.0"
rusttype = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.0"
textwrap = "0.11"
thiserror = "1.0"
walkdir = "2.2.9"
