[package]
authors = ["Jonathan Frankel <frankeljb@gmail.com>"]
description = "Used to generate contact sheets of videos."
edition = "2018"
keywords = ["contact", "sheet"]
license = "MIT"
name = "vcsr"
readme = "README.md"
repository = "https://github.com/FrankelJb/vcsr"
version = "0.5.1"

[lib]
name = "vcsr"
path = "src/lib.rs"

[[bin]]
name = "vcsr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
console = "0.15.7"
conv = "0.3.3"
dirs = "5.0.1"
dotenvy = "0.15.7"
exitcode = "1.1.2"
humantime = "2.1.0"
image = "0.24.6"
imageproc = "0.23.0"
indicatif = "0.17.3"
log = "0.4.17"
num_cpus = "1.15.0"
palette = "0.7.2"
rand = "0.8.5"
rayon = "1.7.0"
rustfft = "6.1.0"
rusttype = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16.0"
thiserror = "1.0"
time = "0.3.25"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.3.3"
